test/compile_errors/unknown_symbol.ivy
#lang ivy1.7
type nat

# Symbol names must be uppercase
relation test(a: nat, b: nat)
